用户管理的部分已更新

--- a/src/main/resources/templates/backed/ToAuditList.html
+++ b/src/main/resources/templates/backed/ToAuditList.html
@@ -93,13 +93,13 @@
     </div>
 </div>
 
-<script type="text/html" id="img">
-    <div class="layer-photos-demo">
-        <img th:layer-src="${filePath}+'{{d.filePath}}'" th:src="${filePath}+'{{d.filePath}}'" height="30" width="50"
-             alt="{{d.filePath}}"
-             style="border: 1px solid #aaaaaa;cursor: pointer">
-    </div>
-</script>
+<!--<script type="text/html" id="img">-->
+<!--    <div class="layer-photos-demo">-->
+<!--        <img th:layer-src="${filePath}+'{{d.filePath}}'" th:src="${filePath}+'{{d.filePath}}'" height="30" width="50"-->
+<!--             alt="{{d.filePath}}"-->
+<!--             style="border: 1px solid #aaaaaa;cursor: pointer">-->
+<!--    </div>-->
+<!--</script>-->
 
 <script type="text/javascript" th:src="@{/layui2.6/layui.js}" charset="UTF-8"></script>
 <script>
