--- a/src/main/resources/templates/backed/admin.html
+++ b/src/main/resources/templates/backed/admin.html
@@ -79,14 +79,24 @@
                     <i class="iconfont nav_right">&#xe697;</i></a>
                 <ul class="sub-menu">
                     <li>
-                        <a onclick="xadmin.add_tab('订单列表','order-list.html')">
+                        <a onclick="xadmin.add_tab('待审核列表','order-list.html')">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>订单列表</cite></a>
+                            <cite>待审核列表</cite></a>
                     </li>
                     <li>
-                        <a onclick="xadmin.add_tab('订单列表1','order-list1.html')">
+                        <a onclick="xadmin.add_tab('待发布列表','order-list1.html')">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>订单列表1</cite></a>
+                            <cite>待发布列表</cite></a>
+                    </li>
+                    <li>
+                        <a onclick="xadmin.add_tab('已发布列表列表','order-list1.html')">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>已发布列表列表</cite></a>
+                    </li>
+                    <li>
+                        <a onclick="xadmin.add_tab('回收站','order-list1.html')">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>回收站</cite></a>
                     </li>
                 </ul>
             </li>
