--- a/src/main/resources/static/css/logins.css
+++ b/src/main/resources/static/css/logins.css
@@ -6,7 +6,7 @@ body { height: 100%; background: #fff url(../images/backgroud.png) 50% 50% no-re
 .form-item { position: relative; width: 360px; margin: 0 auto; padding-bottom: 30px;}
 .form-item input { width: 288px; height: 48px; padding-left: 70px; border: 1px solid #fff; border-radius: 25px; font-size: 18px; color: #fff; background-color: transparent; outline: none;}
 .form-item button { width: 360px; height: 50px; border: 0; border-radius: 25px; font-size: 18px; color: #1f6f4a; outline: none; cursor: pointer; background-color: #fff; }
-#username { background: url(../images/emil.png) 20px 14px no-repeat; }
+#username { background: url(../images/account.png) 20px 14px no-repeat; }
 #password { background: url(../images/password.png) 23px 11px no-repeat; }
 .tip { display: none; position: absolute; left: 20px; top: 52px; font-size: 14px; color: #f50; }
 .reg-bar { width: 360px; margin: 20px auto 0; font-size: 14px; overflow: hidden;}
