--- a/src/main/resources/templates/backed/blackList.html
+++ b/src/main/resources/templates/backed/blackList.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport"
           content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8"/>
-    <title>从化农产品后台管理</title>
+    <title>众筹公益系统后台管理</title>
     <link rel="stylesheet" type="text/css" th:href="@{/lib/layui/css/layui.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/font.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/xadmin.css}">
