用户管理的部分已更新

--- a/src/main/resources/templates/backed/admin/admin.html
+++ b/src/main/resources/templates/backed/admin/admin.html
@@ -100,6 +100,34 @@
                     </li>
                 </ul>
             </li>
+            <li>
+                <a href="javascript:;">
+                    <i class="iconfont left-nav-li" lay-tips="公益项目管理">&#xe723;</i>
+                    <cite>公益项目管理</cite>
+                    <i class="iconfont nav_right">&#xe697;</i></a>
+                <ul class="sub-menu">
+                    <li>
+                        <a onclick="xadmin.add_tab('待审核列表','order-list.html')">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>待审核列表</cite></a>
+                    </li>
+                    <li>
+                        <a onclick="xadmin.add_tab('待发布列表','order-list1.html')">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>待发布列表</cite></a>
+                    </li>
+                    <li>
+                        <a onclick="xadmin.add_tab('已发布列表列表','order-list1.html')">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>已发布列表列表</cite></a>
+                    </li>
+                    <li>
+                        <a onclick="xadmin.add_tab('回收站','order-list1.html')">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>回收站</cite></a>
+                    </li>
+                </ul>
+            </li>
         </ul>
     </div>
 </div>
@@ -122,7 +150,7 @@
         </div>
         <div class="layui-tab-content">
             <div class="layui-tab-item layui-show">
-                <iframe src='./welcome.html' frameborder="0" scrolling="yes" class="x-iframe"></iframe>
+                <iframe th:src='@{/welcome}' frameborder="0" scrolling="yes" class="x-iframe"></iframe>
             </div>
         </div>
         <div id="tab_show"></div>
@@ -132,14 +160,7 @@
 <style id="theme_style"></style>
 <!-- 右侧主体结束 -->
 <!-- 中部结束 -->
-<script>//百度统计可去掉
-var _hmt = _hmt || [];
-(function () {
-    var hm = document.createElement("script");
-    hm.src = "https://hm.baidu.com/hm.js?b393d153aeb26b46e9431fabaf0f6190";
-    var s = document.getElementsByTagName("script")[0];
-    s.parentNode.insertBefore(hm, s);
-})();</script>
+
 </body>
 
 </html>
