用户管理的部分已更新

--- a/src/main/resources/templates/backed/admin/admin.html
+++ b/src/main/resources/templates/backed/admin/admin.html
@@ -102,30 +102,26 @@
             </li>
             <li>
                 <a href="javascript:;">
-                    <i class="iconfont left-nav-li" lay-tips="公益项目管理">&#xe723;</i>
-                    <cite>公益项目管理</cite>
+                    <i class="iconfont left-nav-li" lay-tips="组织管理">&#xe723;</i>
+                    <cite>组织管理</cite>
                     <i class="iconfont nav_right">&#xe697;</i></a>
                 <ul class="sub-menu">
                     <li>
-                        <a onclick="xadmin.add_tab('待审核列表','order-list.html')">
+                        <a onclick="xadmin.add_tab('待审核列表','/toAuditList')">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>待审核列表</cite></a>
+                            <cite>组织列表</cite></a>
                     </li>
                     <li>
-                        <a onclick="xadmin.add_tab('待发布列表','order-list1.html')">
+                        <a onclick="xadmin.add_tab('通过列表','/toOrganizationList')">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>待发布列表</cite></a>
+                            <cite>组织列表</cite></a>
                     </li>
                     <li>
-                        <a onclick="xadmin.add_tab('已发布列表列表','order-list1.html')">
+                        <a onclick="xadmin.add_tab('不通过列表','/toOrganizationList')">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>已发布列表列表</cite></a>
+                            <cite>组织列表</cite></a>
                     </li>
-                    <li>
-                        <a onclick="xadmin.add_tab('回收站','order-list1.html')">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>回收站</cite></a>
-                    </li>
+
                 </ul>
             </li>
         </ul>
