--- a/src/main/resources/templates/backed/admin/blackList.html
+++ b/src/main/resources/templates/backed/admin/blackList.html
@@ -115,11 +115,14 @@
             type: 'GET'
             ,url:'/user/userBlackList'
             ,toolbar: '#toolbarDemo' //开启头部工具栏，并为其绑定左侧模板
-            ,defaultToolbar: ['filter', 'exports', 'print', { //自定义头部工具栏右侧图标。如无需自定义，去除该参数即可
-                title: '提示'
-                ,layEvent: 'LAYTABLE_TIPS'
-                ,icon: 'layui-icon-tips'
-            }]
+            , where: {
+                name: $('input[name="name"]').val(),
+                sfzh: $('input[name="sfzh"]').val(),
+                phone: $('input[name="phone"]').val(),
+                orgCode: $('input[name="orgCode"]').val(),
+                orgName: $('input[name="orgName"]').val(),
+                role: $('input[name="role"]').val()
+            }
             ,title: '黑名单数据表'
             ,cols: [
                 [
