--- a/src/main/resources/templates/backed/admin/toAuditList.html
+++ b/src/main/resources/templates/backed/admin/toAuditList.html
@@ -24,10 +24,12 @@
 </head>
 
 <script type="text/html" id="toolbarDemo">
-    <button class="layui-btn layui-btn-sm" lay-event="delete" onclick="return false;">批量拉黑</button>
+    <button class="layui-btn layui-btn-sm" lay-event="delete" onclick="return false;">删除</button>
+    <button class="layui-btn layui-btn-sm" lay-event="add" onclick="return false;">添加组织</button>
 </script>
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-xs" lay-event="del">拉进黑名单</a>
+    <a class="layui-btn layui-btn-xs" lay-event="pass">通过</a>
+    <a class="layui-btn layui-btn-xs" lay-event="noPass">不通过</a>
 </script>
 <body>
 <div class="x-nav">
@@ -49,12 +51,9 @@
                     <form class="layui-form" action="">
                         <div class="layui-form layui-form-pane">
                             <div class="layui-form-item">
-                                <div class="layui-inline">
-                                    <input type="text" id="name" name="name" placeholder="请输入姓名"
-                                           autocomplete="off" class="layui-input">
-                                </div>
+
                                 <div class="layui-inline" style="margin-left: -1px">
-                                    <input type="text" id="sfzh" name="sfzh" placeholder="请输入身份证号码"
+                                    <input type="text" id="linkman" name="linkman" placeholder="请输入联系人姓名"
                                            autocomplete="off" class="layui-input">
                                 </div>
                                 <div class="layui-inline" style="margin-left: -1px">
@@ -67,10 +66,6 @@
                                 </div>
                                 <div class="layui-inline" style="margin-left: -1px">
                                     <input type="text" id="orgName" name="orgName" placeholder="请输入组织名称"
-                                           autocomplete="off" class="layui-input">
-                                </div>
-                                <div class="layui-inline" style="margin-left: -1px">
-                                    <input type="text" id="role" name="role" placeholder="请输入角色"
                                            autocomplete="off" class="layui-input">
                                 </div>
 
@@ -112,13 +107,14 @@
         const tableIns = table.render({
             elem: '#test',
             type: 'GET'
-            ,url:'/user/userWhiteList'
+            ,url:'/org/selectOrgList'
             ,toolbar: '#toolbarDemo' //开启头部工具栏，并为其绑定左侧模板
-            ,defaultToolbar: ['filter', 'exports', 'print', { //自定义头部工具栏右侧图标。如无需自定义，去除该参数即可
-                title: '提示'
-                ,layEvent: 'LAYTABLE_TIPS'
-                ,icon: 'layui-icon-tips'
-            }]
+            , where: {
+                linkman: $('input[name="linkman"]').val(),
+                phone: $('input[name="phone"]').val(),
+                orgCode: $('input[name="orgCode"]').val(),
+                orgName: $('input[name="orgName"]').val(),
+            }
             ,title: '黑名单数据表'
             ,cols: [
                 [
@@ -128,22 +124,13 @@
                         return (data.LAY_TABLE_INDEX + 1);
                     }
                 }
-                    ,{field:'account', title:'用户名', align: 'center', width:120, edit: 'text'}
-                    ,{field:'role', title:'角色', align: 'center', width:120, edit: 'text'}
-                    ,{field:'sex', title:'性别', align: 'center', width:80, edit: 'text', sort: true}
-                    ,{field:'name', title:'姓名', align: 'center', width:100}
-                    ,{field:'sfzh', title:'身份证', align: 'center'}
-                    ,{field:'nation', title:'民族', align: 'center', width:80, sort: true}
-                    ,{field:'birth', title:'出生时间', align: 'center', width:120}
-                    ,{field:'phone', title:'联系电话', align: 'center', width:100, sort: true}
-                    ,{field:'area', title:'籍贯', align: 'center', width:120}
-                    ,{field:'filePath', title:'文件', align: 'center', width:120, event: "pit", templet: "#img"}
-                    ,{field:'orgCode', title:'组织编号', align: 'center', width:120}
-                    ,{field:'orgName', title:'组织名字', align: 'center', align: 'center', width:120}
-                    ,{field:'balance', title:'账户余额', align: 'center', width:120}
-                    ,{field:'status', title:'账号状态', align: 'center', width:120}
+                    ,{field:'orgCode', title:'组织编号', align: 'center', width:120, edit: 'text'}
+                    ,{field:'orgName', title:'组织名称', align: 'center', width:120, edit: 'text'}
+                    ,{field:'address', title:'地址', align: 'center', width:80, edit: 'text', sort: true}
+                    ,{field:'linkman', title:'联系人', align: 'center', width:100}
+                    ,{field:'phone', title:'联系方式', align: 'center'}
+                    ,{field:'email', title:'电子邮箱', align: 'center', width:80, sort: true}
                     ,{field:'createTime', title:'创建时间', align: 'center', width:120}
-                    ,{field:'updateTime', title:'更新时间', align: 'center', width:120}
                     ,{fixed: 'right', title:'操作', align: 'center', toolbar: '#barDemo', width:100}
                 ]
             ]
