用户管理的部分已更新

--- a/src/main/resources/templates/backed/admin/admin.html
+++ b/src/main/resources/templates/backed/admin/admin.html
@@ -109,17 +109,17 @@
                     <li>
                         <a onclick="xadmin.add_tab('待审核列表','/toAuditList')">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>组织列表</cite></a>
+                            <cite>待审核列表</cite></a>
                     </li>
                     <li>
-                        <a onclick="xadmin.add_tab('通过列表','/toOrganizationList')">
+                        <a onclick="xadmin.add_tab('审核通过列表','/toApprovedList')">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>组织列表</cite></a>
+                            <cite>通过列表</cite></a>
                     </li>
                     <li>
-                        <a onclick="xadmin.add_tab('不通过列表','/toOrganizationList')">
+                        <a onclick="xadmin.add_tab('审核不通过列表','/toFailedList')">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>组织列表</cite></a>
+                            <cite>审核不通过列表</cite></a>
                     </li>
 
                 </ul>
