--- a/src/main/resources/templates/backed/admin/toAuditList.html
+++ b/src/main/resources/templates/backed/admin/toAuditList.html
@@ -25,7 +25,6 @@
 
 <script type="text/html" id="toolbarDemo">
     <button class="layui-btn layui-btn-sm" lay-event="pass" onclick="return false;">通过</button>
-    <button class="layui-btn layui-btn-sm" lay-event="noPass" onclick="return false;">不通过</button>
 </script>
 <script type="text/html" id="barDemo">
     <a class="layui-btn layui-btn-xs" lay-event="pass">通过</a>
@@ -96,6 +95,15 @@
 <!--    </div>-->
 <!--</script>-->
 
+<script id="img" type="text/html">
+    {{# var srr=d.filePath.split(",");
+    for(var j in srr) { srr[j] }}
+    <div class="layer-photos-demo" style="margin:0 10px; display:inline-block !important; display:inline;  max-width:70px; max-height:50px;">
+        <img style=" max-width:70px; max-height:50px;" th:layer-src="${filePath}+'{{srr[j]}}'" th:src="${filePath}+'{{srr[j]}}'" />
+    </div>
+    {{# } }}
+</script>
+
 <script type="text/javascript" th:src="@{/layui2.6/layui.js}" charset="UTF-8"></script>
 <script>
     layui.use(['table', "form", 'element', 'layer'], function () {
@@ -116,6 +124,7 @@
                 orgName: $('input[name="orgName"]').val(),
             }
             ,title: '黑名单数据表'
+            , cellMinWidth: 80//全局定义常规单元格的最小宽度，layui 2.2.1 新增
             ,cols: [
                 [
                     {type: 'checkbox', fixed: 'left'}
@@ -124,17 +133,19 @@
                         return (data.LAY_TABLE_INDEX + 1);
                     }
                 }
-                    ,{field:'orgCode', title:'组织编号', align: 'center', width:120, edit: 'text'}
-                    ,{field:'orgName', title:'组织名称', align: 'center', width:120, edit: 'text'}
-                    ,{field:'address', title:'地址', align: 'center', width:80, edit: 'text', sort: true}
-                    ,{field:'linkman', title:'联系人', align: 'center', width:100}
+                    ,{field:'orgCode', title:'组织编号', align: 'center', edit: 'text'}
+                    ,{field:'orgName', title:'组织名称', align: 'center', edit: 'text'}
+                    ,{field:'filePath', title:'文件', align: 'center', width:100, templet: "#img", event: "pit"}
+                    ,{field:'address', title:'地址', align: 'center', edit: 'text'}
+                    ,{field:'linkman', title:'联系人', align: 'center'}
                     ,{field:'phone', title:'联系方式', align: 'center'}
-                    ,{field:'email', title:'电子邮箱', align: 'center', width:80, sort: true}
-                    ,{field:'createTime', title:'创建时间', align: 'center', width:120}
+                    ,{field:'email', title:'电子邮箱', align: 'center', sort: true}
+                    ,{field:'createTime', title:'创建时间', align: 'center'}
                     ,{fixed: 'right', title:'操作', align: 'center', toolbar: '#barDemo', width:150}
                 ]
             ]
             ,page: true
+            , even: true
         });
 
         //搜索重载
@@ -158,7 +169,27 @@
                     obj.del()
                     layer.close(index);
                     $.ajax({
-                        url: '/user/whiteUser?id='+data.id ,
+                        url: '/org/updatePassOrg?id='+data.id ,
+                        type:'POST',
+                        success:function (res) {
+                            if (res.code==200){
+                                layer.msg("操作成功!", {icon: 6});
+                                setTimeout(function () {
+                                    location.reload();
+                                }, 1000);
+                            }else {
+                                layer.msg("操作失败!",{icon:5})
+                            }
+                        }
+                    });
+                    return false;
+                });
+            }else if (obj.event === 'noPass') {
+                layer.confirm('审核不通过吗?',function (index) {
+                    obj.del()
+                    layer.close(index);
+                    $.ajax({
+                        url: '/org/updateNoPassOrg?id='+data.id ,
                         type:'POST',
                         success:function (res) {
                             if (res.code==200){
@@ -194,14 +225,14 @@
                 ids.push(item.id);
             });
             switch (obj.event) {
-                case 'delete':
+                case 'pass':
                     if (data.length === 0) {
                         layer.msg('请选择数据', {icon: 2, anim: 6});
                         return;
                     }
-                    layer.confirm('确定进行批量拉黑操作吗？', {icon: 3, closeBtn: 0}, function (index) {
+                    layer.confirm('确定进行批量通过审核操作吗？', {icon: 3, closeBtn: 0}, function (index) {
                         $.ajax({
-                            url: '/user/blackUserChangesList',
+                            url: '/org/passOrgList',
                             type: 'POST',
                             data: JSON.stringify(ids),
                             contentType: "application/json;charset=UTF-8",
@@ -221,6 +252,7 @@
                         return false;
                     })
                     break;
+
             }
         });
     });
