--- a/src/main/resources/templates/backed/auditor/blackList.html
+++ b/src/main/resources/templates/backed/auditor/blackList.html
@@ -24,10 +24,10 @@
 </head>
 
 <script type="text/html" id="toolbarDemo">
-    <button class="layui-btn layui-btn-sm" lay-event="delete" onclick="return false;">批量拉黑</button>
+    <button class="layui-btn layui-btn-sm" lay-event="delete" onclick="return false;">批量移出黑名单</button>
 </script>
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-xs" lay-event="del">拉进黑名单</a>
+    <a class="layui-btn layui-btn-xs" lay-event="del">移出黑名单</a>
 </script>
 <body>
 <div class="x-nav">
@@ -93,23 +93,15 @@
     </div>
 </div>
 
-<!--<script type="text/html" id="img">-->
-<!--    <div class="layer-photos-demo">-->
-<!--        <img th:layer-src="${filePath}+'{{d.filePath}}'" th:src="${filePath}+'{{d.filePath}}'" height="30" width="50"-->
-<!--             alt="{{d.filePath}}"-->
-<!--             style="border: 1px solid #aaaaaa;cursor: pointer">-->
-<!--    </div>-->
-<!--</script>-->
-<script id="img" type="text/html">
-    {{# var srr=d.filePath.split(",");
-    for(var j in srr) { srr[j] }}
-    <div class="layer-photos-demo" style="margin:0 10px; display:inline-block !important; display:inline;  max-width:70px; max-height:50px;">
-        <img style=" max-width:70px; max-height:50px;" th:layer-src="${filePath}+'{{srr[j]}}'" th:src="${filePath}+'{{srr[j]}}'" />
+<script type="text/html" id="img">
+    <div class="layer-photos-demo">
+        <img th:layer-src="${filePath}+'{{d.filePath}}'" th:src="${filePath}+'{{d.filePath}}'" height="30" width="50"
+             alt="{{d.filePath}}"
+             style="border: 1px solid #aaaaaa;cursor: pointer">
     </div>
-    {{# } }}
 </script>
 
-<script type="text/javascript" th:src="@{/layui2.6/layui.js}" charset="UTF-8"></script>
+<script th:src="@{/lib/layui/layui.all.js}" charset="utf-8"></script>
 <script>
     layui.use(['table', "form", 'element', 'layer'], function () {
         const element = layui.element;
@@ -117,10 +109,11 @@
         const form = layui.form;
         const layer = layui.layer;
         const $ = layui.$
+
         const tableIns = table.render({
             elem: '#test',
             type: 'GET'
-            ,url:'/user/userWhiteList'
+            ,url:'/user/userBlackList'
             ,toolbar: '#toolbarDemo' //开启头部工具栏，并为其绑定左侧模板
             , where: {
                 name: $('input[name="name"]').val(),
@@ -139,27 +132,26 @@
                         return (data.LAY_TABLE_INDEX + 1);
                     }
                 }
-                    ,{field:'account', title:'用户名', align: 'center', width:120, edit: 'text'}
-                    ,{field:'role', title:'角色', align: 'center', width:120, edit: 'text'}
-                    ,{field:'sex', title:'性别', align: 'center', width:80, edit: 'text', sort: true}
-                    ,{field:'name', title:'姓名', align: 'center', width:100}
-                    ,{field:'sfzh', title:'身份证', align: 'center'}
-                    ,{field:'nation', title:'民族', align: 'center', width:80, sort: true}
-                    ,{field:'birth', title:'出生时间', align: 'center', width:120}
-                    ,{field:'phone', title:'联系电话', align: 'center', width:100, sort: true}
-                    ,{field:'area', title:'籍贯', align: 'center', width:120}
-                    ,{field:'filePath', title:'文件', align: 'center', width:100, templet: "#img", event: "pit"}
-                    ,{field:'orgCode', title:'组织编号', align: 'center', width:120}
-                    ,{field:'orgName', title:'组织名字', align: 'center', width:120}
-                    ,{field:'balance', title:'账户余额', align: 'center', width:120}
-                    ,{field:'status', title:'账号状态', align: 'center', width:120}
-                    ,{field:'createTime', title:'创建时间', align: 'center', width:120}
-                    ,{field:'updateTime', title:'更新时间', align: 'center', width:120}
-                    ,{fixed: 'right', title:'操作', align: 'center', toolbar: '#barDemo', width:100}
+                    ,{field:'account', title:'用户名', width:120, edit: 'text'}
+                    ,{field:'role', title:'角色', width:120, edit: 'text'}
+                    ,{field:'sex', title:'性别', width:80, edit: 'text', sort: true}
+                    ,{field:'name', title:'姓名', width:100}
+                    ,{field:'sfzh', title:'身份证'}
+                    ,{field:'nation', title:'民族', width:80, sort: true}
+                    ,{field:'birth', title:'出生时间', width:120}
+                    ,{field:'phone', title:'联系电话', width:100, sort: true}
+                    ,{field:'area', title:'籍贯', width:120}
+                    ,{field:'filePath', title:'文件', align: 'center', width:120, event: "pit", templet: "#img"}
+                    ,{field:'orgCode', title:'组织编号', width:120}
+                    ,{field:'orgName', title:'组织名字', width:120}
+                    ,{field:'balance', title:'账户余额', width:120}
+                    ,{field:'status', title:'账号状态', width:120}
+                    ,{field:'createTime', title:'创建时间', width:120}
+                    ,{field:'updateTime', title:'更新时间', width:120}
+                    ,{fixed: 'right', title:'操作', toolbar: '#barDemo', width:100}
                 ]
             ]
             ,page: true
-            , even: true
         });
 
         //搜索重载
@@ -173,11 +165,11 @@
             return false;
         });
 
-
-//监听行工具事件
+        //监听行工具事件
         table.on('tool(test)',function (obj) {
             const data=obj.data,
                 layEvent=obj.event;
+
             if (layEvent==='del'){
                 layer.confirm('确定要拉其进黑名单吗?',function (index) {
                     obj.del()
@@ -204,16 +196,14 @@
                     , anim: 5 //0-6的选择，指定弹出图片动画类型，默认随机（请注意，3.0之前的版本用shift参数）
                 });
             }
-
         });
-
 
         //监听头工具栏事件
         table.on('toolbar(test)', function (obj) {
 
             const checkStatus = table.checkStatus(obj.config.id);
             let data = checkStatus.data;
-            console.log(data)
+            console.log(JSON.stringify(data) )
             let ids = [];
             layui.each(data, (index, item) => {
                 ids.push(item.id);
@@ -224,15 +214,15 @@
                         layer.msg('请选择数据', {icon: 2, anim: 6});
                         return;
                     }
-                    layer.confirm('确定进行批量拉黑操作吗？', {icon: 3, closeBtn: 0}, function (index) {
+                    layer.confirm('确定进行批量移出黑名单操作吗？', {icon: 3, closeBtn: 0}, function (index) {
                         $.ajax({
-                            url: '/user/blackUserChangesList',
+                            url: '/user/whiteUserChangesList',
                             type: 'POST',
                             data: JSON.stringify(ids),
+                            // data:{courseIds:courseIds.toString()},
                             contentType: "application/json;charset=UTF-8",
                             success: function (res) {
-                                console.log(JSON.stringify(res) )
-                                if (res) {
+                                if (res.code==200) {
                                     layer.msg("操作成功", {icon: 6});
                                     setTimeout(function () {
                                         location.reload();
@@ -248,6 +238,7 @@
                     break;
             }
         });
+
     });
 </script>
 </body>
